# DocSearch-with-RAG-and-LLAMA

./: . gitignore  .gitignore  Dockerfile  README.md  Streamlit.py  app.py  data_s3_pdf.py  docker-compose.yml  document_parser.py  document_processors.py  parameter_config.py  parse_pdf.py  pyproject.toml  requirements.txt  streamlit_app.py  utils.py
airflow/: Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: pipeline_scrape_and_extract.py
airflow/dags/data_load/: data_storage_log.py  download_and_upload_files_to_s3.py  load_to_snowflake.py  parameter_config.py  prepare_dataframe.py  scrape_data.py
architecture-diagram/: architecture-diagram.ipynb
auth/: Home.py
fast_api/: fast_api_setup.py  fastapi_setup.py
fast_api/config/: config_settings.py  db_connection.py
fast_api/routes/: data_routes.py  index_routes.py  pdf_routes.py  query_routes.py  rag_qa_routes.py
fast_api/schemas/: hybrid_schema.py  report_schema.py  request_schemas.py
fast_api/services/: data_service.py  rag_service.py  report_service.py
fast_api/services/multi_modal/: document_parser.py  utils.py
features/: chat_with_pdf.py  multi_modal_rag.py  report_generator.py
